fix plugin header container alignment

--- a/packages/plugin-ext/src/main/browser/style/index.css
+++ b/packages/plugin-ext/src/main/browser/style/index.css
@@ -34,10 +34,6 @@
     flex-direction: column;
 }
 
-.pluginHeaderContainer {
-    margin-bottom: 5px;
-}
-
 .theia-plugin-test-tab-icon {
     -webkit-mask: url('test.svg');
     mask: url('test.svg');
